--- a/delivery.html
+++ b/delivery.html
@@ -39,15 +39,15 @@
       <div class="menu">
         <table class="two" width="930" cellpadding="0" cellspacing="0" align="center">
           <tr align="center">
-            <td width="104.5" onmouseover="this.style.backgroundImage='url(images/delivery/images/menu_bjon.jpg)'" onmouseout="this.style.backgroundImage='url(images/delivery/images/menu_bj.jpg)'"><a href="">设为首页</a></td>
-            <td width="104.5" onmouseover="this.style.backgroundImage='url(images/delivery/images/menu_bjon.jpg)'" onmouseout="this.style.backgroundImage='url(images/delivery/images/menu_bj.jpg)'"><a href="">企业概况</a></td>
-            <td width="104.5" onmouseover="this.style.backgroundImage='url(images/delivery/images/menu_bjon.jpg)'" onmouseout="this.style.backgroundImage='url(images/delivery/images/menu_bj.jpg)'"><a href="">新闻动态</a></td>
-            <td width="104.5" onmouseover="this.style.backgroundImage='url(images/delivery/images/menu_bjon.jpg)'" onmouseout="this.style.backgroundImage='url(images/delivery/images/menu_bj.jpg)'"><a href="">运输路线</a></td>
-            <td width="104.5" onmouseover="this.style.backgroundImage='url(images/delivery/images/menu_bjon.jpg)'" onmouseout="this.style.backgroundImage='url(images/delivery/images/menu_bj.jpg)'"><a href="">服务项目</a></td>
-            <td width="104.5" onmouseover="this.style.backgroundImage='url(images/delivery/images/menu_bjon.jpg)'" onmouseout="this.style.backgroundImage='url(images/delivery/images/menu_bj.jpg)'"><a href="">车辆展示</a></td>
-            <td width="104.5" onmouseover="this.style.backgroundImage='url(images/delivery/images/menu_bjon.jpg)'" onmouseout="this.style.backgroundImage='url(images/delivery/images/menu_bj.jpg)'"><a href="">人力资源</a></td>
-            <td width="104.5" onmouseover="this.style.backgroundImage='url(images/delivery/images/menu_bjon.jpg)'" onmouseout="this.style.backgroundImage='url(images/delivery/images/menu_bj.jpg)'"><a href="">客户留言</a></td>
-            <td width="104.5" onmouseover="this.style.backgroundImage='url(images/delivery/images/menu_bjon.jpg)'" onmouseout="this.style.backgroundImage='url(images/delivery/images/menu_bj.jpg)'"><a href="">联系我们</a></td>
+            <td width="104.5" ><a href="">设为首页</a></td>
+            <td width="104.5" ><a href="">企业概况</a></td>
+            <td width="104.5" ><a href="">新闻动态</a></td>
+            <td width="104.5" ><a href="">运输路线</a></td>
+            <td width="104.5" ><a href="">服务项目</a></td>
+            <td width="104.5" ><a href="">车辆展示</a></td>
+            <td width="104.5" ><a href="">人力资源</a></td>
+            <td width="104.5" ><a href="">客户留言</a></td>
+            <td width="104.5" ><a href="">联系我们</a></td>
           </tr>
         </table>
       </div>
